fix(css): name bg spacing for small/med fix

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -504,7 +504,6 @@ h5 {
   float: left;
   position: relative;
   text-align: center;
-  margin-top: -2.4em;
   margin-bottom: -1em;
   width: 100%;
   z-index: 10;
@@ -526,45 +525,39 @@ h5 {
 }
 
 @media only screen and (min-width: 20em) {
-
+  .grads p {
+    margin-top: -2.3em;
+  }
   .s-1-2 .pic {
     width: 50%;
   }
-
   .s-1-2 .pic2 {
     width: 100%;
   }
-
   .grads .partial {
     display: block;
   }
-
   .grads .full {
     display: none;
   }
-
   .teachers {
     width: 100%;
   }
-
  }
 
 @media only screen and (min-width: 37.5em) {
   .m-1-4 .pic {
     width: 25%;
   }
-
   .m-1-4 .pic2 {
     width: 50%;
   }
-
   .grads .partial {
     display: none;
   }
   .grads .full {
     display: block;
   }
-
  }
 
 @media only screen and (max-width: 900px) {
@@ -574,18 +567,18 @@ h5 {
   .grads .full {
     display: none;
   }
-
  }
 
 @media only screen and (min-width: 75em) {
+  .grads p {
+    margin-top: -2.4em;
+  }
   .l-1-6 .pic {
     width: 16.6666%;
   }
-
   .l-1-6 .pic2 {
     width: 33.3333%;
   }
-
  }
 
 .event {
